--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>TrashMoon</title>
     <script src="enchant.js"></script>
+    <script src="nineleap.enchant.js"></script>
     <script src="gamescript.js"></script>
+
     <style type="text/css">
         div#enchant-stage {border: solid 1px #cccccc;}
     </style>
