garbage処理いろいろ

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>TrashMoon</title>
     <script src="enchant.js"></script>
+
     <script src="nineleap.enchant.js"></script>
     <script src="gamescript.js"></script>
 
