--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="gamescript.js"></script>
 
     <style type="text/css">
-        div#enchant-stage {border: solid 1px #cccccc;}
+        div#enchant-stage
     </style>
 </head>
 <body>
