--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>TrashMoon</title>
+    <title>Garbage Trucker</title>
     <script src="enchant.js"></script>
 
     <script src="nineleap.enchant.js"></script>
