モバイル周りの修正

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <style type="text/css">
         div#enchant-stage
+        body {
+            margin: 0;
+        }
     </style>
 </head>
 <body>
